--- a/漫画/一拳超人/index.html
+++ b/漫画/一拳超人/index.html
@@ -16,8 +16,8 @@
 
     <div data-role="page" id="page1">
         <div data-role="header" data-position="fixed">
-            <h1>一拳超人 第54话 - 漫画网</h1>
-            <a href="#anylink" data-role="button" data-icon="search" class="ui-btn-right">搜索</a>
+            <h1 style="margin-left:auto;margin-right:auto;">一拳超人 第54话-动漫网</h1>
+            <a href="#anylink" data-icon="search" class="ui-btn-right">搜索</a>
         </div>
         <div data-role="content">
 
@@ -40,7 +40,7 @@
                         <a href="#" data-role="button" style="margin-top:20px;">加载更多</a>
                     </div>
                     <div class="ui-block-b">
-                        <a href="#page2" data-transition="slide" data-role="button" style="margin-top:20px;">发表留言</a>
+                        <a href="#page2" data-role="button" style="margin-top:20px;">发表留言</a>
                     </div>
                 </div>
 
@@ -76,16 +76,16 @@
             </div>
         </div>
     </div>
-
+    <!---->
     <div data-role="page" id="page2">
         <div data-role="header" data-position="fixed">
-            <a href="#page1" data-role="button" data-icon="search" data-transition="slide">返回</a>
+            <a href="#page1" data-role="button" data-icon="search">返回</a>
             <h1>一拳超人 第54话 - 漫画网</h1>
         </div>
         <div data-role="content">
             <textarea style="min-height:200px;"></textarea>
             <a href="#" data-role="button">提交</a>
-            <a href="#page1" data-role="button" >取消</a>
+            <a href="#page1" data-role="button">取消</a>
         </div>
 
     </div>
