--- a/home.html
+++ b/home.html
@@ -1,50 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>漫画</title>
-    <meta charset="utf-8">
-    <meta name="keywords" content="xxx,xxx,xxx">
-    <meta name="description" content="xxxxx">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-
-<div data-role="page">
-    <div data-role="header" data-position="fixed">
-        <h1 style="margin-left:auto;margin-right:auto;">漫画列表</h1>
-    </div>
-    <div data-role="content">
-        <ul data-role="listview">
-            <li>A</li>
-            <li>B</li>
-            <li>C</li>
-            <li>D</li>
-            <li>E</li>
-            <li>F</li>
-            <li>G</li>
-            <li>H</li>
-            <li>I</li>
-            <li>J</li>
-            <li>K</li>
-            <li>L</li>
-            <li>M</li>
-            <li>N</li>
-            <li>O</li>
-            <li>P</li>
-            <li>Q</li>
-            <li>R</li>
-            <li>S</li>
-            <li>T</li>
-            <li>U</li>
-            <li>V</li>
-            <li>W</li>
-            <li>X</li>
-            <li>Y</li>
-            <li>Z</li>
-        </ul>
-    </div>
-</div>
-
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-</body>
-</html>
+<script language="javascript" type="text/javascript">
+    window.location.href="video/index.php";
+</script>
