--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script language="javascript" type="text/javascript">
-    window.location.href="web/main/index.php";
+    window.location.href="/web/main/index.php";
 </script>
